fixed minor alignment problem

--- a/assignment4/css/base.css
+++ b/assignment4/css/base.css
@@ -326,6 +326,7 @@ footer nav li a{
     background-position: center left;
     background-repeat: no-repeat;
     padding-left:20px;
+    padding-top: 5px;
     margin-top: 0.25em;
     height:16px;
 }
